2002-07-31  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (mips_target_format): Fix formatting.
	Add recognition of n32 ABI formats.

2002-07-30  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* tc-mips.c (load_address): Don't clobber $at when loading a
	64-bit address in non-PIC code if noat is in effect.
	(macro): Likewise.

2002-07-30  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/tc-mips.c (macro): Use codes 6 and 7 in trap instructions
	used in division/multiply macro expansions similarly to how they
	are used in the variants with break instructions.
	(macro2): Likewise.

2002-07-30  Graeme Peterson  <gp@qnx.com>

	* configure.in: Add support for arm-*-nto target.
	* configure: Regenerate.
	
2002-07-30  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (struct literal_pool): Add fields to allow
	multiple literal pools to be maintained.
	(find_literal_pool): New function.
	(find_or_make_literal_pool): New function.
	(add_to_literal_pool): Use find_or_make_literal_pool.
        (arm_s_text, arm_s_data, arm_s_section): Remove - no longer
	needed.
	(s_ltorg): Use find_literal_pool.
	(arm_cleanup): Dump all literal pools.
        * doc/c-arm.texi: Document new behaviour of only dumping literal
	pools upon request.

2002-07-26  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_set_cpu): Use PPC_OPCODE_64 as the default
	rather than PPC_OPCODE_32 for powerpc64*.

2002-07-25  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.
	* po/fr.po: Updated French translation.

2002-07-25  Richard Sandiford  <rsandifo@redhat.com>

	* doc/c-mips.texi: Remove -mcpu.  Document -mabi.
	* configure.in (MIPS_CPU_STRING_DEFAULT): New configuration macro.
	(USE_E_MIPS_ABI_O32, MIPS_DEFAULT_64BIT): New configuration macros.
	* configure, config.in: Regenerate.
	* config/tc-mips.c (file_mips_abi): Rename to mips_abi.
	(mips_set_options): Remove "abi" field.
	(mips_opts): Update accordingly.  Replace all uses of mips_opts.abi